kubernetes/infrastructure/base/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflare-tunnel
  namespace: traefik
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: "*.${cluster_domain}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.${cluster_domain}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
