kubernetes/infrastructure/base/traefik/new-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ntfy.${cluster_domain}`)
      kind: Rule
      services:
        - name: ntfy
          port: 19200
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy-tls
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ntfy.${cluster_domain}`)
      kind: Rule
      services:
        - name: ntfy
          port: 19200
  tls: {}
